--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,38 @@
-# Automatically build the project and run any configured tests for every push and submitted pull request.
-# This can help catch issues that only occur on certain platforms or Java versions, and provides a first line of defense against bad commits.
-
 name: Build Iridium
+
 on: [pull_request, push]
 
 jobs:
   build:
     strategy:
       matrix:
-        # Use these Java versions
-        java: [
-          21,    # Current Java LTS
-        ]
+        java: [21] # Java LTS
     runs-on: ubuntu-22.04
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v3
+
       - name: Setup JDK ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
           distribution: 'zulu'
           cache: gradle
+
       - name: Make Gradle Wrapper Executable
         run: chmod +x ./gradlew
+
       - name: Build
         run: ./gradlew build
+
+      # ✅ Upload artifact (để tải file build)
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Iridium-Build
+          path: |
+            build/libs/*.jar
