Update Minecraft and Fabric versions in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,16 +21,13 @@ mod_icon_file=icon.png
 mod_license=LGPL-3.0-or-later
 
 # Minecraft Properties
-minecraft_version=1.21.4
-mappings_version=2025.03.23
-
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-fabric_api_version=0.119.3+1.21.4
-fabric_loader_version=0.16.14
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.2
+loader_version=0.17.3
+loom_version=1.13-SNAPSHOT
 
 # Dependencies
-yacl_version=3.7.1+1.21.4-fabric
+yacl_version=3..8.0+1.21.9-fabric
 modmenu_version=13.0.3
 lwjgl_version=3.3.3
 lwjgl_natives=
