--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,8 @@ mod_license=LGPL-3.0-or-later
 minecraft_version=1.21.10
 mappings_version=2025.03.23
 yarn_mappings=1.21.10+build.2
-loader_version=0.17.3
+fabric_api_version=0.138.3+1.21.10
+fabric_loader_version=0.17.3
 loom_version=1.13-SNAPSHOT
 
 # Dependencies
