--- a/gradle.properties
+++ b/gradle.properties
@@ -21,12 +21,14 @@ mod_icon_file=icon.png
 mod_license=LGPL-3.0-or-later
 
 # Minecraft Properties
-minecraft_version=1.21.10
-mappings_version=2025.03.23
-yarn_mappings=1.21.10+build.2
-fabric_api_version=0.138.3+1.21.10
+mappings_version=2025.10.05
+minecraft_version=1.21.9
+yarn_mappings=1.21.9+build.1
 fabric_loader_version=0.17.3
 loom_version=1.13-SNAPSHOT
+
+# Fabric API
+fabric_api_version=0.134.0+1.21.9
 
 # Dependencies
 yacl_version=3..8.0+1.21.9-fabric
