--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,7 @@ loom_version=1.13-SNAPSHOT
 fabric_api_version=0.134.0+1.21.9
 
 # Dependencies
-yacl_version=3..8.0+1.21.9-fabric
-modmenu_version=13.0.3
+yacl_version=3.8.0+1.21.9-fabric
+modmenu_version=16.0.0-rc.1
 lwjgl_version=3.3.3
 lwjgl_natives=
